# pg_doorman

./: .envrc  .gitignore  BENCHMARKS.md  BINARY_UPGRADE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose-tests.mk  docker-compose.yaml  flake.nix  pg_doorman.service  pg_doorman.toml  versions.json
.github/workflows/: build-packages.yaml  deploy-site.yml  rust-clippy.yaml  tests-pull-request.yaml
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/benchmarks/: index.html
2.1.0/changelog/: index.html
2.1.0/search/: search_index.json
2.2.1/: 404.html  index.html  sitemap.xml
2.2.1/benchmarks/: index.html
2.2.1/changelog/: index.html
2.2.1/search/: search_index.json
2.2.2/: 404.html  index.html  sitemap.xml
2.2.2/benchmarks/: index.html
2.2.2/changelog/: index.html
2.2.2/search/: search_index.json
doc/: binary_upgrade.md  config.md  usage.md
documentation/: README.md  mkdocs.yml  pyproject.toml
documentation/docs/: benchmarks.md  changelog.md  index.md
documentation/docs/reference/: general.md  pool.md  prometheus.md  settings.md
documentation/docs/tutorials/: basic-usage.md  binary-upgrade.md  contributing.md  installation.md  overview.md
documentation/mkdocs-customizations/macros/: docissimo.py
example/: .gitignore  docker-compose.yaml
example/pg_doorman/: pg_doorman.toml  server.crt  server.key
example/postgres/: pg_hba.conf  postgresql.conf
patches/deadpool/: Cargo.toml
pkg/: make_vendor_license.py
src/: admin.rs  client.rs  cmd_args.rs  config.rs  constants.rs  core_affinity.rs  daemon.rs  errors.rs  generate.rs  generate_test.rs  jwt_auth.rs  lib.rs  logger.rs  main.rs  messages.rs  pool.rs  prometheus_exporter.rs  prometheus_exporter_test.rs  rate_limit.rs  scram_client.rs  scram_server.rs  server.rs  stats.rs  tls.rs
src/auth/: jwt.rs  mod.rs  pam.rs  scram.rs  talos.rs
src/daemon/: error.rs  lib.rs
src/messages/: config_socket.rs  error.rs  extended.rs  mod.rs  protocol.rs  socket.rs  tests.rs  types.rs
src/stats/: address.rs  client.rs  connections.rs  percenitle.rs  pool.rs  print_all_stats.rs  server.rs  socket.rs
tests/: .gitignore  fixture.sql  go_cache.Dockerfile  my_hba.toml  nodejs_test.Dockerfile  pg_doorman.Dockerfile  python_cache.Dockerfile  ruby_test.Dockerfile  tests.toml
tests/go/: alias_test.go  application_name_test.go  cancel_tls_test.go  check_query_test.go  copy_from_test.go  copy_test.go  deallocate_test.go  env  go.mod  (+15 more)
(+59 files in other folders)
