[package]
name = "pg_doorman"
version = "2.2.0"
edition = "2021"
rust-version = "1.87.0"
license = "MIT"


[profile.release]
codegen-units = 1
lto = true

[dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["background_threads_runtime_support"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter", "std"]}
log = "0.4.27"
clap = { version = "4.5.37", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0.140"
ipnet = { version = "2.11.0", features = ["serde"] }
once_cell = "1.21.3"
arc-swap = "1.7.1"
toml = "0.8.22"
prometheus = "0.13.3"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "fs", "parking_lot", "sync", "io-util", "net", "macros", "signal", "time"] }
exitcode = "1.1.2"
pin-project = "1"
bytes = "1.10.1"
md-5 = "0.10"
socket2 = { version = "0.5.9", features = ["all"] }
chrono = "0.4"
rand = "0.9.1"
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10"
stringprep = "0.1"
nix = { version = "0.30.1", features = ["process", "signal"] }
sha-1 = "0.10"
lru = "0.14.0"
deadpool = { version = "=0.10.0", features = ["rt_tokio_1", "managed"] }
deadpool-runtime = { version = "=0.1.3", features = ["tokio_1"] }
parking_lot = {version = "0.12.1", features = ["hardware-lock-elision"]}
libc = "0.2.172"
num_cpus = "1.16.0"
syslog = "7.0.0"
native-tls = { version = "0.2.14" }
tokio-native-tls = { version = "0.3.1" }
serde-toml-merge = { version = "0.3.8"}
jwt = { version = "0.16.0", features = ["openssl"] }
openssl = { version = "0.10.72"}
iota = { version = "0.2.3" }
pin-project-lite = "0.2.16"
pam-client = { version =  "0.5.0", optional = true }
postgres = "0.19.10"
postgres-native-tls = "0.5.1"
flate2 = "1.0.28"

[replace]
'deadpool:0.10.0' = { path = 'patches/deadpool' }
'deadpool-runtime:0.1.3' = { path = 'patches/deadpool/runtime' }
'native-tls:0.2.14' = {path = 'patches/rust-native-tls'}

[features]
default = []
pam = ["dep:pam-client"]
