[project]
name = "pg_doorman-docs"
version = "999"
description = "PgDoorman Documentation powered by MkDocs Material"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
    "toml>=0.10.2",
]
